--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -19,11 +19,14 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
-            width: 40%;
+            width: 100%; /* Ajustez en fonction de la largeur souhaitée */
             margin-bottom: 20px;
         }
+        
         video {
-          max-width: 40%;
+            width: 200px; /* Largeur fixe */
+            height: 150px; /* Hauteur fixe */
+            object-fit: cover; /* Ajuste la vidéo pour couvrir le conteneur */
             border: 1px solid #ccc;
             border-radius: 5px;
             margin: 5px;
