--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -24,11 +24,9 @@
         }
         
         video {
-            width: 400px; /* Largeur fixe pour les vidéos */
-            height: 300px; /* Hauteur fixe pour les vidéos */
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            object-fit: cover; /* Assure que les vidéos remplissent le conteneur sans déformation */
+            width: 100%;
+            height: auto;
+            object-fit: contain;
         }
         .controls {
             display: flex;
