--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -24,9 +24,11 @@
         }
         
         video {
-            width: 100%;
+            width: 40%;
             height: auto;
             object-fit: contain;
+            border: 1px solid #ccc;
+            border-radius: 5px;
         }
         .controls {
             display: flex;
