--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -222,7 +222,8 @@
                 } else {
                     cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
                 }
-            } else if (videoDevices.length > 0) {
+            }
+            if (videoDevices.length > 0) {
                 videoDevices.forEach((device, index) => {
                     const option = document.createElement('option');
                     option.value = device.deviceId;
