--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -223,7 +223,7 @@
                     cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
                 }
             }
-            if (videoDevices.length > 0) {
+            else if (videoDevices.length > 0) {
                 videoDevices.forEach((device, index) => {
                     const option = document.createElement('option');
                     option.value = device.deviceId;
