--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -20,12 +19,12 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
-            width: 80%; /* Ajustez en fonction de la largeur souhaitée */
+            width: 80%;
             margin-bottom: 20px;
         }
         
         video {
-            max-width: 40%;
+            width: 40%;
             height: auto;
             object-fit: contain;
             border: 1px solid #ccc;
