--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -349,18 +349,18 @@
         function addRemoteVideo(peerId, stream) {
             if (!document.getElementById(peerId + '-wrapper')) {
                 const videoWrapper = document.createElement('div');
-                videoWrapper.className = 'video-wrapper';
-                videoWrapper.id = peerId + '-wrapper';
-
-                const videoElement = document.createElement('video');
-                videoElement.id = peerId + 'Video';
-                videoElement.autoplay = true;
-                videoElement.playsinline = true;
-                videoElement.srcObject = stream;
-                videoElement.style.maxWidth = '100%'; // Assurez-vous que la largeur ne dépasse pas 100%
-                videoElement.style.maxHeight = '60vh'; // Limitez la hauteur pour éviter le plein écran
-
+                videoWrapper.classList.add('video-wrapper');
+                videoWrapper.id = `remote-wrapper-${peerId}`;
+        
                 videoWrapper.appendChild(videoElement);
+                const remoteVideo = document.createElement('video');
+                remoteVideo.id = `remoteVideo-${peerId}`;
+                remoteVideo.autoplay = true;
+                remoteVideo.playsinline = true; // Ajoutez cet attribut
+                remoteVideo.setAttribute('playsinline', 'true'); // Assurez-vous que l'attribut est ajouté
+                remoteVideo.setAttribute('webkit-playsinline', 'true'); // Assurez-vous que l'attribut est ajouté pour iOS
+                remoteVideo.srcObject = stream;
+
 
                 const controlsDiv = document.createElement('div');
                 controlsDiv.className = 'controls';
